# terminalChat

./: .gitignore  CMakeLists.txt  README.md  client  client.c  server  server.c  test.md
backend/: .gitignore  CMakeLists.txt
backend/include/: common.h
backend/socket-server/: index.js  package-lock.json  package.json
backend/src/: chat_room.c  network_utils.c  server.c
client.dSYM/Contents/Resources/DWARF/: client
client.dSYM/Contents/Resources/Relocations/aarch64/: client.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  index.css  index.js  socket.js
frontend/src/components/: ChatRoom.js  Login.js  MessageInput.js  MessageList.js
frontend/src/styles/: App.css  ChatRoom.css  Login.css  MessageInput.css  MessageList.css
include/: chat_room.h  common.h  network_utils.h
server.dSYM/Contents/Resources/DWARF/: server
server.dSYM/Contents/Resources/Relocations/aarch64/: server.yml
src/: CMakeCache.txt  Makefile  chat_room.c  client.c  cmake_install.cmake  network_utils.c  server.c
